# phoney

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/: prompt.txt
prompts/generations/: 60e22de7.txt  838081d4.txt  f8e871f7.txt  ff45129e.txt
results/: fake_6c2ee861.csv  granite4.1_30b_838081d4.csv  granite4.1_3b_838081d4.csv  granite4.1_8b_838081d4.csv  llama3.2_3b_838081d4.csv  qwen3_14b_60e22de7.csv  qwen3_14b_6c2ee861.csv  qwen3_14b_838081d4.csv  qwen3_14b_ff45129e.csv
src/fake_review_classifier/: cli.py  models.py  parsing.py  prompt.py  runner.py
src/fake_review_classifier/providers/: base.py  fake.py
src/phoney/: cli.py  dataset.py  models.py  paths.py  prompt.py  render.py  scoring.py
src/phoney/providers/: fake.py  ollama.py
tests/: test_cli.py  test_dataset.py  test_fake_provider.py  test_ollama_provider.py  test_parsing.py  test_paths.py  test_prompt.py  test_runner.py  test_scoring.py
