[project]
name = "fake-review-classifier"
version = "0.1.0"
description = "Local-first LLM classifier for fake review detection."
authors = [
    {name = "Edward Robinson", email = "edward@edev.io"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = ["pydantic (>=2.13.4,<3.0.0)"]

[tool.poetry]
packages = [{include = "fake_review_classifier", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
